tests/NormalTests/paczka1/small_fuzzy/77133626.err
Error in line 7: MpTQ0L A865 34,4
Error in line 8: I2Z4XSF5H S997 73,0
